Added help command reload only after successful save set locale when loading correctly register configSerializeables init players in their phases